--- a/zz-client-one/src/main/resources/bootstrap.yml
+++ b/zz-client-one/src/main/resources/bootstrap.yml
@@ -22,6 +22,11 @@ spring:
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
+  rabbitmq:
+    host: localhost
+    uername:
+    password:
+    virtual-host:
 mybatis-plus:
   global-config:
     db-config:
