--- a/zz-client-two/src/main/resources/bootstrap.yml
+++ b/zz-client-two/src/main/resources/bootstrap.yml
@@ -29,6 +29,10 @@ spring:
     uername:
     password:
     virtual-host:
+  boot:
+    admin:
+      client:
+        url: 127.0.0.1:8094
 mybatis-plus:
   global-config:
     db-config:
