添加参数校验依赖

--- a/zz-common/pom.xml
+++ b/zz-common/pom.xml
@@ -38,6 +38,15 @@
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <!-- hibernate validator-->
+        <!--<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>-->
         <!--数据库文档生成器-->
         <dependency>
             <groupId>cn.smallbun.screw</groupId>
