--- a/zz-getway/src/main/resources/bootstrap.yml
+++ b/zz-getway/src/main/resources/bootstrap.yml
@@ -26,6 +26,7 @@ spring:
           - Path=/zz/one/**
         filters:
           - StripPrefix=2
+          - SwaggerHeaderFilter  # 指定filter
 
       - id: two
         uri: lb://zz-client-two
@@ -33,3 +34,4 @@ spring:
           - Path=/zz/two/**
         filters:
           - StripPrefix=2
+          - SwaggerHeaderFilter  # 指定filter
