--- a/zz-getway/pom.xml
+++ b/zz-getway/pom.xml
@@ -45,6 +45,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.zz.common</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--Swagger-UI API文档生产工具-->
         <dependency>
