--- a/zz-client-two/pom.xml
+++ b/zz-client-two/pom.xml
@@ -133,7 +133,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.22</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
