--- a/zz-common/pom.xml
+++ b/zz-common/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
       <!--  <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
