--- a/zz-client-one/pom.xml
+++ b/zz-client-one/pom.xml
@@ -151,18 +151,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>com.zz.common</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
             <version>4.0.0-RC3</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <dependencyManagement>
