--- a/zz-client-two/src/main/resources/bootstrap.yml
+++ b/zz-client-two/src/main/resources/bootstrap.yml
@@ -16,7 +16,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/sql?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
+      url: jdbc:mysql://localhost:3306/sql?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
       username: root
       password: a111
       # 初始化连接数
@@ -102,4 +102,5 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
   mapper-locations: classpath*:mapper/*mapper.xml
-
+#logging:
+#  config: classpath:logback.xml
