--- a/zz-client-one/src/main/resources/bootstrap.yml
+++ b/zz-client-one/src/main/resources/bootstrap.yml
@@ -16,6 +16,7 @@ spring:
       config:
         enabled: true
         refresh-enabled: true
+        server-addr: 127.0.0.1:8848
     sentinel:
       transport:
         dashboard: 127.0.0.1:8080
